# llmzone

./: .gitignore  Dockerfile.build  LICENSE  README.md  build.sh  gen-appimage.sh  init-docker.sh  package-lock.json  package.json  start.sh  svelte.config.js  update_l10n.sh  vite.config.js
.github/: copilot-instructions.md
.github/workflows/: release.yml
messages/: de.json  en.json  ru.json  uk.json
project.inlang/: settings.json
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: http.toml
src-tauri/src/: lib.rs  main.rs
src/lib/: config.ts  types.ts
src/lib/actions/: appEvents.ts
src/lib/components/: AboutModal.svelte  AppHeader.svelte  ChatWindow.svelte  GlobalSettings.svelte  Inspector.svelte  MessageBubble.svelte  Sidebar.svelte  ToastContainer.svelte  WorkspaceIconPicker.svelte
src/lib/components/chat/: ChatInput.svelte  MessageBubble.svelte  ReasoningBlock.svelte  ToolWidget.svelte
src/lib/components/inspector/: MCPServerWidget.svelte  TabContext.svelte  TabModel.svelte  TabTools.svelte
src/lib/mcp/: dispatcher.ts  instances.svelte.ts  manager.svelte.ts
src/lib/services/: appState.svelte.ts  chatService.ts  toastService.svelte.ts
src/lib/services/adapters/: factory.ts  interface.ts  lmStudioAdapter.ts  openRouterAdapter.ts  openaiAdapter.ts
src/lib/storage/: chatStorage.ts
src/lib/utils/: rustFetch.ts
src/routes/: +layout.svelte  +page.svelte
